--- a/css/filmes.css
+++ b/css/filmes.css
@@ -14,3 +14,22 @@ h1{
     color: #7e2a62;
 
 }
+header {
+
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+header a {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    text-decoration: none;
+    margin: 0 10px;
+}
+header a:hover {
+    text-decoration: underline;
+}
