--- a/css/series.css
+++ b/css/series.css
@@ -6,3 +6,22 @@ h2{
     text-align: center;
     color: #7e2a62;
 }
+header {
+
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+header a {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    text-decoration: none;
+    margin: 0 10px;
+}
+header a:hover {
+    text-decoration: underline;
+}
