--- a/css/filmes.css
+++ b/css/filmes.css
@@ -14,8 +14,14 @@ h1{
     color: #7e2a62;
 
 }
-header {
 
+header {
+    background: #ebe3da;
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 15px;
+    text-decoration: none;
     color: white;
     text-align: center;
     padding: 20px;
@@ -23,6 +29,7 @@ header {
     bottom: 0;
     width: 100%;
 }
+
 header a {
     text-align: center;
     font-family: Arial, sans-serif;
@@ -31,5 +38,7 @@ header a {
     margin: 0 10px;
 }
 header a:hover {
+    text-decoration: underline;
+    color: darkred;
     text-decoration: underline;
 }
