--- a/css/series.css
+++ b/css/series.css
@@ -33,3 +33,9 @@ header a:hover {
     color: darkred;
     text-decoration: underline;
 }
+.imagem-zoom{
+    transition: transform 0,3s;
+}
+.imagem-zoom:hover{
+    transform: scale(1.2);
+}
