--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,34 +1,58 @@
-body{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Libre Baskerville", serif;
+    text-decoration: none;
+    list-style: none;
+}
+body{
     background-color: rgb(124, 5, 5);
 }
 
 
 header{
-    position: absolute;
+    position: fixed;
     top: 0;
-    background: black;
+    left: 0;
+    width: 100%;
+    padding: 35px 0;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 15px;
-    text-align: center;
-    padding: 30px 0;
-    width: 100%;
+    background: black;
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 100;
 }
-    
-header a {
-    text-align: center;
+
+.navbar a{
     text-decoration: none;
-    font-family: Arial, sans-serif;
+    font-size: 18px;
     color: darkred;
-    margin: 0 15px;
+    font-weight: 500;
+    margin: 0 20px;
+    border-bottom: 3px solid transparent;
+    transition: 0.5s ease;
 }
-        
-header a:hover {
-    text-decoration: underline;
+
+.navbar a:hover,
+.navbar a.active{
+    border-bottom: 3px solid darkred;
 }
+.logo {
+    font-size: 25px;
+    color: darkred;
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+.logo:hover {
+    text-shadow: 0 0 25px darkred, 
+                 0 0 50px darkred;
+    transform: scale(1.2);
+}
+
 .button {
     position: absolute;
     top: 5px;
@@ -44,7 +68,7 @@ header a:hover {
     padding: 15px;
     width: 120px;
     cursor: pointer;
-    margin: 5px;
+    margin: 15px 5px 5px 5px;
     transition: 0.5s ease;
    }
 .button:hover {
@@ -60,6 +84,7 @@ h1{
     color: black;
 }
 
+
 h2{
     padding: 20px;
     text-align: center;
@@ -67,11 +92,14 @@ h2{
 }
 
 .description{
-font-family: Arial, sans-serif;
-text-align: center;
-font-size: 16px;
-color: black;
-margin: 25px 200px;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    font-size: 16px;
+    color: black;
+    margin: 25px 200px;
 }
 
 .gallery-wrapper {
