--- a/css/filmes.css
+++ b/css/filmes.css
@@ -1,158 +1,107 @@
-h2{
-    color:  #7e2a62;
-    text-align: center;
-
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: rgb(124, 5, 5);
 }
 
-header {
-    background: #ebe3da;
+
+header{
+    position: absolute;
+    top: 0;
+    background: black;
     text-transform: uppercase;
-    color: #000000;
     font-weight: bold;
     font-size: 15px;
-    text-decoration: none;
-    color: white;
     text-align: center;
-    padding: 20px;
-    position: relative;
-    bottom: 0;
+    padding: 30px 0;
     width: 100%;
 }
-
-.inline {
-    display: inline;
-    margin-right: 10px; /* Adiciona um espaçamento opcional entre as frases */
-}
-
+    
 header a {
     text-align: center;
-    font-family: Arial, sans-serif;
-    color: #000000;
     text-decoration: none;
-    margin: 0 10px;
+    font-family: Arial, sans-serif;
+    color: darkred;
+    margin: 0 15px;
 }
+        
 header a:hover {
     text-decoration: underline;
-    color: darkred;
-    text-decoration: underline;
 }
-.imagem-zoom{
-    width: ;
-    height: 330px ;
-    transition: transform 0.3s;
-}
-.imagem-zoom:hover{
-    transform: scale(1.2);
-}
-.group {
-    display: flex;
-    line-height: 28px;
-    align-items: center;
-    position: relative;
-    max-width: 500px;
-   }
-   
-   .input {
-    width: 100%;
-    height: 40px;
-    line-height: 28px;
-    padding: 0 1rem;
-    padding-left: 2.5rem;
-    border: 2px solid transparent;
-    border-radius: 8px;
-    outline: none;
-    background-color: #f3f3f4;
-    color: #0d0c22;
-    transition: .3s ease;
-   }
-   
-   .input::placeholder {
-    color: #9e9ea7;
-   }
-   
-   .input:focus, input:hover {
-    outline: none;
-    border-color: rgba(234,76,137,0.4);
-    background-color: #fff;
-    box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
-   }
-   
-   .icon {
+.button {
     position: absolute;
-    left: 1rem;
-    fill: #9e9ea7;
-    width: 1rem;
-    height: 1rem;
-   }
-   
-.box-busca{ 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 165%;
-    height: 100%;
-    background-color: #ebe3da;
-}
- 
-.search-box-input::placeholder {
-    
-    color:#fa0808;
-    opacity: 0.6;
-}
-/* Chrome, Opera ySafari */
-.search-box-input::-webkit-input-placeholder { color: #6e6e6e; }
-/* Firefox 19+ */
-.search-box-input::-moz-placeholder { color: #6e6e6e; }
-/* IE 10+ y Edge */
-.search-box-input:-ms-input-placeholder { color: #6e6e6e; }
-.search-box form {
-    
-    display: flex;
-    border-radius: 50px;
-    background-color: #ebe3da;
-    height: 45px;
-}
-.search-box:hover .search-box-input {
-    
-    padding-left: 2em;
-    padding-right: 1em;
-    width: 300px;
-}
-.search-box-input {
-    outline: 0;
-    font-size: 1.2em;
-    color: #000000;
-    width: 0;
-    padding: 0;
+    top: 5px;
+    right: 50px;
+    display: inline-block;
+    border-radius: 10px;
+    background-color: darkred;
     border: none;
-    background: none;
-    transition: .45s;
+    color: black;
+    letter-spacing: 1px;
+    text-align: center;
+    font-size: 17px;
+    padding: 15px;
+    width: 120px;
+    cursor: pointer;
+    margin: 5px;
+    transition: 0.5s ease;
+   }
+.button:hover {
+    background-color: black;
+    color: darkred;
+    border: 2px solid darkred;
 }
-.search-box-button {
-   display: flex;
-   border-radius: 50%;
-   width: 45px;
-   height: 35px;
-   background-color: #000000;
-   border: none;
-   cursor: pointer;
-   transition: .3s;
+
+
+h1{
+    margin: 150px 35% 20px 35%;
+    text-align: center;
+    color: black;
+    border: 2px solid black;
+    border-radius: 20px;
+    transition: 0.5s ease;
 }
-.search-box-button:active  {
-    transform: scale(.85);
+
+h1:hover{
+    background-color: black;
+    color: darkred;
 }
-.search-box-icone {
-    margin: auto;
-    color: #c00303;
+
+h2{
+    padding: 20px;
+    text-align: center;
+    color: black;
 }
-@media screen and (min-width: 400px){
-    
-    .search-box:hover .search-box-input {
-        width: 350px;
-    }
-} 
-   
-   
-   
-   
+
+.description{
+font-family: Arial, sans-serif;
+text-align: center;
+font-size: 16px;
+color: black;
+margin: 25px 200px;
+}
+
+.gallery-wrapper {
+position: relative;
+width: 100%;
+overflow: hidden; /* Esconde o conteúdo que não cabe na tela */
+}
+.gallery-container {
+display: flex;
+overflow-x: auto;
+scroll-behavior: smooth; /* Transição suave durante a rolagem */
+white-space: nowrap;
+padding: 10px;
+box-sizing: border-box;
+}
+.gallery-container img {
+width: 200px;
+height: auto;
+margin-right: 10px;
+transition: transform 0.3s ease;
+display: inline-block;
+}
+.gallery-container img:hover {
+transform: scale(1.2);
+}
