--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; 
-  background-color: darkred;
+  background-color: #762B60 ;
 }
 
 .form_container {
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   gap: 15px;
   padding: 50px 40px 20px 40px;
-  background-color: black;
+  background-color: #FFFFFF;
   box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
     0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09),
     0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
@@ -42,7 +42,7 @@ body {
   margin: 0;
   font-size: 1.25rem;
   font-weight: bold;
-  color: darkred;
+  color: #581845;
 }
 
 .subtitle {
@@ -50,7 +50,7 @@ body {
   max-width: 80%;
   text-align: center;
   line-height: 1.1rem;
-  color: white;
+  color: #581845;
 }
 
 .input_container {
@@ -72,7 +72,7 @@ body {
 
 .input_label {
   font-size: 0.9rem;
-  color: darkred;
+  color: #581845;
   font-weight: bold;
 }
 
@@ -83,13 +83,13 @@ body {
   border-radius: 7px;
   outline: none;
   background: transparent;
-  border: 2px solid darkred;
+  border: 2px solid #581845;
   transition: 0.5s ease;
 }
 
 .input_field:focus {
-  border: 2px solid darkred;
-  box-shadow: 0 0 25px darkred;
+  border: 2px solid #581845;
+  box-shadow: 0 0 25px #581845;
   background-color: transparent;
 }
 
@@ -97,10 +97,10 @@ body {
   width: 100%;
   height: 40px;
   border: 0;
-  background: darkred;
+  background: #D4AF37;
   border-radius: 7px;
   outline: none;
-  color: black;
+  color: #581845;
   font-weight: bold;
   cursor: pointer;
 }
@@ -115,14 +115,18 @@ body {
   background: transparent;
   border-radius: 7px;
   outline: none;
-  color: darkred;
-  border: 2px solid darkred;
+  color: #581845;
+  border: 2px solid #581845;
   cursor: pointer;
 }
-.sign-in_btn:hover,
+.sign-in_btn:hover{
+  background-color: #B38E2F;
+  border: 2px solid #581845;
+}
 .sign-in_ggl:hover,
 .sign-in_apl:hover{
-  box-shadow: 0 0 25px darkred;
+  box-shadow: 0 0 25px #581845;
+
 }
 
 
@@ -132,7 +136,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 30px;
-  color: darkred;
+  color: #581845;
 }
 
 .separator .line {
@@ -140,7 +144,7 @@ body {
   width: 100%;
   height: 1px;
   border: 0;
-  background-color: darkred;
+  background-color: #581845;
 }
 
 .note {
